--- a/challenge-1.ipynb
+++ b/challenge-1.ipynb
@@ -55,9 +55,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 142,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Q1: Which type of ML uses labeled data?\n",
+      "supervised learning\n"
+     ]
+    }
+   ],
    "source": [
     "def answer_q1():\n",
     "    \"\"\"\n",
@@ -92,9 +101,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 143,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Q2: Which approach is typically used to measure differences between predictions and actual labels?\n",
+      "loss function\n"
+     ]
+    }
+   ],
    "source": [
     "def answer_q2():\n",
     "    \"\"\"\n",
@@ -128,9 +146,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 144,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Q3: What best distinguishes classification from regression?\n",
+      "Regression => continuous, Classification => discrete\n"
+     ]
+    }
+   ],
    "source": [
     "def answer_q3():\n",
     "    \"\"\"\n",
@@ -164,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,10 +201,13 @@
     "\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from xgboost import XGBClassifier\n",
     "\n",
     "# TODO: Import your classifier model of choice below.\n",
     "# Example:\n",
     "from sklearn.linear_model import Perceptron \n",
+    "from sklearn.linear_model import LogisticRegression\n",
     "# The above is just an example, feel free to use any classifier like DecisionTreeClassifier, LogisticRegression, etc. based on your results and experimentation.\n",
     "\n",
     "SEED = 42"
@@ -193,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [
     {
@@ -438,7 +468,7 @@
        "[5 rows x 31 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 147,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -464,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [
     {
@@ -525,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [
     {
@@ -559,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [
     {
@@ -607,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -629,8 +659,10 @@
     "    # Remember to import your model of choice from sklearn in the imports cell above\n",
     "    # Do not remove random_state so that your model is reproducible which is needed for fair grading\n",
     "    # example:\n",
-    "    model = Perceptron(max_iter=500, random_state=random_state)\n",
-    "\n",
+    "    # model = LogisticRegression(max_iter=500, random_state=random_state)\n",
+    "    model = RandomForestClassifier(n_estimators=500,random_state=random_state)\n",
+    "    # model = XGBClassifier(random_state=random_state)\n",
+    "    # LogisticRegression 95\n",
     "    # TODO: train the model\n",
     "    model.fit(X_train, y_train) \n",
     "    \n",
@@ -650,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -682,14 +714,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model's test accuracy: 0.9\n"
+      "Model's test accuracy: 0.97\n"
      ]
     }
    ],
