--- a/challenge-1.ipynb
+++ b/challenge-1.ipynb
@@ -202,12 +202,12 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import accuracy_score\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
-    "from xgboost import XGBClassifier\n",
+    "# from xgboost import XGBClassifier\n",
     "\n",
     "# TODO: Import your classifier model of choice below.\n",
     "# Example:\n",
-    "from sklearn.linear_model import Perceptron \n",
-    "from sklearn.linear_model import LogisticRegression\n",
+    "# from sklearn.linear_model import Perceptron \n",
+    "# from sklearn.linear_model import LogisticRegression\n",
     "# The above is just an example, feel free to use any classifier like DecisionTreeClassifier, LogisticRegression, etc. based on your results and experimentation.\n",
     "\n",
     "SEED = 42"
